[package]
name = "Ketamine"
version = "0.1.0"
authors = ["Moritz Bischof <moritz.bischof@aleph-alpha.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ketamin"
path = "src/lib.rs"

[[bin]]
name = "ketamin_bin"
path = "src/bin.rs"

[dependencies]
pest = "2.1.2"
pest_derive = "2.1.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"
ordered-float = "1.0.2"